@@ -135,25 +135,75 @@ function create_temp_dir ($dir = '', $prefix = '', $mode = 0700)
 	return ($i < 100) ? $path : FALSE;
 }
 
+
 /**
- * Search program inside path and return location
+ * Search for executables in system and return full path of its location
+ *
+ * It will try to search in PATH envioronment variable first; after failing that,
+ * use glob() to search for all paths supplied by user, and finally some more
+ * guess work among common apps locations.
  *
  * @since 0.3.50
  * @uses is_windows()
+ *
  * @param string $prog The program name to be searched
+ * @param array|string $extra_win_paths Array containing paths to be searched,
+ * also accepts a %PATH%-like string
+ * @param array|string $extra_unix_paths Similar to previous argument, but
+ * conforms to unix $PATH style if specified as string
+ *
  * @return string|boolean Full path of program if it is found, FALSE otherwise
  */
-function search_path ($prog)
+function search_prog ($binary_name, $extra_win_paths = array(), $extra_unix_paths = array())
 {
-	foreach ( explode( ( is_windows() ? ';' : ':' ),
-			getenv('PATH')) as $dir ) {
-		if ( file_exists ($dir . DIRECTORY_SEPARATOR . $prog) )
-			return $dir . DIRECTORY_SEPARATOR . $prog;
+	if ( is_windows() ) $binary_name .= '.exe';
+
+	foreach ( explode( PATH_SEPARATOR, getenv('PATH')) as $dir )
+	{
+		$fullpath = realpath ($dir . DIRECTORY_SEPARATOR . $binary_name);
+		if ( is_executable ( $fullpath ) ) return $fullpath;
 	}
 
+	// game over if glob() is disabled
+	if ( !function_exists ('glob') ) return $fullpath;
+
+	if ( is_windows() )
+	{
+		if ( is_string ($extra_win_paths) )
+			$extra_paths = explode ( PATH_SEPARATOR, $extra_win_paths );
+		elseif ( !is_array ($extra_win_paths) )
+			$extra_paths = array();
+
+		$extra_paths[] = "C:\\Program Files";
+		$extra_paths[] = "C:\\Program Files\\*";
+		$extra_paths[] = "C:\\cygwin*\\bin";
+	}
+	else
+	{
+		if ( is_string ($extra_unix_paths) )
+			$extra_paths = explode ( PATH_SEPARATOR, $extra_unix_paths );
+		elseif ( !is_array ($extra_unix_paths) )
+			$extra_paths = array();
+
+		$extra_paths[] = "/usr/local/bin";
+		$extra_paths[] = "/opt/bin";
+		$extra_paths[] = "/opt/*/bin";
+	}
+
+	foreach ( array_values ($extra_paths) as $dir )
+	{
+		$fullpath = glob ($dir . DIRECTORY_SEPARATOR . $binary_name);
+		if ( !empty ($fullpath) )
+		{
+			foreach ($fullpath as $prog)
+			{
+				$prog = realpath ($prog);
+				if ( is_executable ($prog) ) return $prog;
+			}
+		}
+	}
 	return false;
 }
-
 
 /**
  * Transform all path related options in ScoreRender settings
